Updating the control js - found a bug in the code - turns out coding and doing something else at the same time is a bad idea

--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta name = "viewport" content = "width=device-width">
-    <title>GioWizard</title>
-    <link href = "style.css" rel = "stylesheet" type = "text/css">
-</head>
 
-<body>
+<html>
 
-    <h1>It's time for some GioWizard!</h1>
-    <canvas></canvas>
-    <p>Use the keyboard arrows to move the Gio and jump with the space bar.</p>
+  <head>
 
-    <script src="control.js" type="text/javascript"></script>
+      <meta name = "viewport" content = "width=device-width">
+      <title>GioWizard</title>
+      <link href = "style.css" rel = "stylesheet" type = "text/css">
 
-</body>
+  </head>
+
+  <body>
+
+      <h1>It's time for some GioWizard!</h1>
+
+      <canvas></canvas>
+
+      <p>Use the keyboard arrows to move the Gio and jump with the up arrow.</p>
+
+      <script src = "control.js" type = "text/javascript"></script>
+
+  </body>
 
 </html>
